--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -332,7 +332,7 @@
 }
 
 @media (max-width: 992px) {
-  .hero-content h1 {
+  .hero-content h1, .hero-content h1.de {
     font-size: 4rem;
   }
 
@@ -368,7 +368,7 @@
 }
 
 @media (max-width: 768px) {
-  .hero-content h1 {
+  .hero-content h1, .hero-content h1.de {
     font-size: 3rem;
   }
 
@@ -398,10 +398,14 @@
   #zoho {
     width: 40%;
   }
+  .hero {
+    background-image: url('../assets/images/codesurfmob.jpg');
+
+  }
 }
 
 @media (max-width: 576px) {
-  .hero-content h1 {
+  .hero-content h1, .hero-content h1.de {
     font-size: 2.5rem;
   }
 
