--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -24,7 +24,7 @@
 .header-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 /* Logo Styling */
