--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -204,7 +204,7 @@ nav a.active {
     transform: translateX(0);
   }
 .header-container {
-  justify-content: end;
+  justify-content: space-between;
   gap: 20px;
 }
 
@@ -229,6 +229,14 @@ nav a.active {
 
   .nav.mobile-nav .language-switch {
     margin-top: auto;
+    justify-content: center; 
+    display: flex; 
+    gap: 62px;
+  }
+
+  .language-switch img {
+    width: 50px;
+    height: 50px;
   }
 
   /* Hide submenus on mobile */
