--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -189,12 +189,14 @@
   font-size: 1.5rem;
   color: #333;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .project-content p {
   font-size: 1rem;
   color: #555;
   line-height: 1.5;
+  text-align: center;
 }
 
 .project-content button {
