--- a/src/pages/ContactUs.css
+++ b/src/pages/ContactUs.css
@@ -86,11 +86,11 @@
 }
 
 /* Status message under the form (if you display it via <p> or <Typography>) */
-.status-message {
+/* .status-message {
   margin-top: 1rem;
   font-size: 1rem;
-  color: #333;
-}
+  color: green;
+} */
 
 /* Additional Info / Map Section */
 .additional-info-section {
