--- a/src/pages/ZohoConsulting.css
+++ b/src/pages/ZohoConsulting.css
@@ -7,8 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('../assets/images/c'); /* Update path if needed */
-  background-size: cover;
+  background-image: url('../assets/images/ZOHO.png'); /* Update path if needed */
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   color: white;
@@ -22,7 +22,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 
