--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -27,9 +27,7 @@
   font-weight: bold;
 }
 
-/* =======================================
-   CONTENT SECTIONS
-======================================= */
+/*    CONTENT SECTIONS */
 .about-content-section {
   padding: 60px 20px; /* Genug Abstand für bessere Lesbarkeit */
 }
